(feat) spark tests, dataflow fixes for missing influx writes, refactoring/cleaning